refactor: findAll 메소드 구현 및 테스트 성공